--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>Overworld - Eric Kim</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue_grey-blue.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <link rel="stylesheet" href="styles_global.css" />
     <link rel="stylesheet" href="styles_images.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
@@ -25,9 +26,9 @@
             <nav class="mdl-navigation">
                 <div class="mdl-layout-spacer"></div>
                 <a class="mdl-navigation__link eck-is-active" href="#">Home</a>
-                <a class="mdl-navigation__link" href="#">Github</a>
-                <a class="mdl-navigation__link" href="#">LinkedIn</a>
-                <a class="mdl-navigation__link" href="#">Contact</a>
+                <a class="mdl-navigation__link" href="./github.html">Github</a>
+                <a class="mdl-navigation__link" href="./linkedin.html">LinkedIn</a>
+                <a class="mdl-navigation__link" href="./contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -44,7 +45,7 @@
     <!--Main Body-->
     <main class="mdl-layout__content">
         <div class="mdl-grid mdl-grid-width">
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-card mdl-shadow--4dp">
+            <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--4-col-phone mdl-cell--order-2-phone  mdl-card mdl-shadow--4dp">
                 <div class="mdl-card__media">
                     <a href="#">
                         <img class="eck-card-profile-image" src="./images/profile_me.jpg">
@@ -88,7 +89,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--6-col mdl-cell--5-col-tablet mdl-card mdl-shadow--4dp">
+            <div class="mdl-cell mdl-cell--6-col mdl-cell--5-col-tablet mdl-cell--4-col-phone mdl-cell--order-1-phone mdl-card mdl-shadow--4dp">
                 <div class="mdl-card__title">
                     <h3 class="margin-top-0 margin-bottom-0">Eric Kyung Kim</h3>
                 </div>
@@ -98,7 +99,7 @@
                     </a>
                 </div>
                 <div class="mdl-card__supporting-text padding-bottom-0">
-                    <span>The Portal is a non-profit venture by...</span>
+                    <span>Companies I've worked for</span>
                 </div>
                 <div class="mdl-grid margin-0">
                     <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
@@ -117,44 +118,44 @@
                         whether it is developing an innovative application, or installing a custom hardware solution.</P>
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp eck-card-portrait-image min-height-400">
+            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--hide-phone mdl-card mdl-shadow--4dp eck-card-portrait-image min-height-400">
                 <div class="mdl-card__title mdl-card--expand"></div>
                 <div class="mdl-card__actions background-color-white">
                     <span>Company Picnic August 2016</span>
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-ladb-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-ladb-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     LADB.TV is an innovative platform for secure review and approval for the entertainment industry.
                     Responsibilities include both front and back-end development and writing custom APIs to hook into third-party services.
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-screeningnow-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-screeningnow-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     ScreeningNOW is a new highly advanced and technologically innovative video streaming service tailored to the needs of owners
                      of nearly all forms of entertainment content, including movies, television, and video product.
                 </div>
             </div>
 
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-neybortalk-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-neybortalk-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     NeyborTalk is an engaging social media platform that lets you chat with the people around you. Responsibilities included building a mobile MVP
                     from ground up include both front and back-end development leveraging Foursquare's location service API
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-naya-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-naya-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     Naya is a centralized digital currency and medium of exchange, initially aimed at activities that exchanging Dollar isn't socially acceptable,
                     e.g good deeds and favors. Responsibilities included building a website both front and back-end using Angular and Parse.
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-notary-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-notary-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     NotaryCam is a web service where you can upload your document, connect to a live Notary face-to-face on a webcam, and electronically sign your document.
                     Responsibilities include building a web application both front and back-end using WebRCT, Kurento, Raphael, canvg, and PDFjs.
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-portal-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-portal-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     The Portal check-in system is an internal tool that allows admins to keep track of student hours and display student information and progress.
                     Responsibilities include building a web application both front and back-end using minimal 3rd party libraries.
