--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue_grey-blue.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="styles_global.css" />
-    <link rel="stylesheet" href="styles_images.css" />
+    <link rel="stylesheet" href="./public/styles/styles_global.css" />
+    <link rel="stylesheet" href="./public/styles/styles_images.css" />
 </head>
 
 <body>
@@ -36,10 +36,10 @@
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">Overworld</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link eck-is-active" href="#">Home</a>
-            <a class="mdl-navigation__link" href="#">Github</a>
-            <a class="mdl-navigation__link" href="#">LinkedIn</a>
-            <a class="mdl-navigation__link" href="#">Contact</a>
+            <a class="mdl-navigation__link eck-is-active" href="./index.html">Home</a>
+            <a class="mdl-navigation__link" href="./github.html">Github</a>
+            <a class="mdl-navigation__link" href="./linkedin.html">LinkedIn</a>
+            <a class="mdl-navigation__link" href="./contact.html">Contact</a>
         </nav>
     </div>
     <!--Main Body-->
@@ -48,7 +48,7 @@
             <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--4-col-phone mdl-cell--order-2-phone  mdl-card mdl-shadow--4dp">
                 <div class="mdl-card__media">
                     <a href="#">
-                        <img class="eck-card-profile-image" src="./images/profile_me.jpg">
+                        <img class="eck-card-profile-image" src="./public/images/profile_me.jpg">
                     </a>
                 </div>
                 <div class="mdl-card__supporting-text padding-bottom-0">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="mdl-card__media">
                     <a href="#">
-                        <img src="./images/portal_wide.jpg" class="width-percent-100 eck-card-wide-image">
+                        <img src="./public/images/portal_wide.jpg" class="width-percent-100 eck-card-wide-image">
                     </a>
                 </div>
                 <div class="mdl-card__supporting-text padding-bottom-0">
@@ -109,7 +109,7 @@
                         <small class="cursor-pointer">K5 Ventures</small>
                     </div>
                     <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
-                        <small class="cursor-pointer">Beall Foundation</small>
+                        <small class="cursor-pointer">The Portal</small>
                     </div>
                 </div>
                 <div class="mdl-card__actions">
@@ -166,5 +166,6 @@
     </main>
 </div>
 <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+<script src="./public/scripts/index.js"></script>
 </body>
 </html>
