--- a/github.html
+++ b/github.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue_grey-blue.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-    <link rel="stylesheet" href="styles_global.css" />
-    <link rel="stylesheet" href="styles_images.css" />
+    <link rel="stylesheet" href="./public/styles/styles_global.css" />
+    <link rel="stylesheet" href="./public/styles/styles_images.css" />
 </head>
 
 <body>
@@ -36,19 +36,21 @@
     <div class="mdl-layout__drawer">
         <span class="mdl-layout__title">Overworld</span>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="#">Home</a>
-            <a class="mdl-navigation__link eck-is-active" href="#">Github</a>
-            <a class="mdl-navigation__link" href="#">LinkedIn</a>
-            <a class="mdl-navigation__link" href="#">Contact</a>
+            <a class="mdl-navigation__link" href="./index.html">Home</a>
+            <a class="mdl-navigation__link eck-is-active" href="./github.html">Github</a>
+            <a class="mdl-navigation__link" href="./linkedin.html">LinkedIn</a>
+            <a class="mdl-navigation__link" href="./contact.html">Contact</a>
         </nav>
     </div>
     <!--Main Body-->
     <main class="mdl-layout__content">
         <div class="mdl-grid mdl-grid-width">
-            Github
+            <h3>Embedded Playlist Public HTML</h3>
+            <div id="iframe"></div>
         </div>
     </main>
 </div>
 <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+<script src="./public/scripts/github.js"></script>
 </body>
 </html>
