issue with CORS on github pages, revert back to original

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="mdl-navigation">
                 <div class="mdl-layout-spacer"></div>
                 <a class="mdl-navigation__link eck-is-active" href="/index.html">Home</a>
-                <a class="mdl-navigation__link" href="./githublinkedin.html">Github / LinkedIn</a>
+                <a class="mdl-navigation__link" href="./info.html">Github</a>
                 <a class="mdl-navigation__link" href="./contact.html">Contact</a>
             </nav>
         </div>
@@ -36,7 +36,7 @@
         <span class="mdl-layout__title">Overworld</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link eck-is-active" href="./index.html">Home</a>
-            <a class="mdl-navigation__link" href="./githublinkedin.html">Github / LinkedIn</a>
+            <a class="mdl-navigation__link" href="./info.html">Github</a>
             <a class="mdl-navigation__link" href="./contact.html">Contact</a>
         </nav>
     </div>
