--- a/info.html
+++ b/info.html
@@ -27,7 +27,7 @@
             <nav class="mdl-navigation">
                 <div class="mdl-layout-spacer"></div>
                 <a class="mdl-navigation__link" href="./index.html">Home</a>
-                <a class="mdl-navigation__link eck-is-active" href="./githublinkedin.html">Github / LinkedIn</a>
+                <a class="mdl-navigation__link eck-is-active" href="./info.html">Github</a>
                 <a class="mdl-navigation__link" href="./contact.html">Contact</a>
             </nav>
         </div>
@@ -37,7 +37,7 @@
         <span class="mdl-layout__title">Overworld</span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="./index.html">Home</a>
-            <a class="mdl-navigation__link eck-is-active" href="./githublinkedin.html">Github / LinkedIn</a>
+            <a class="mdl-navigation__link eck-is-active" href="./info.html">Github</a>
             <a class="mdl-navigation__link" href="./contact.html">Contact</a>
         </nav>
     </div>
