Change name of script files and added more jquery functions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="stylesheet" href="./public/styles/styles_global.css" />
-    <link rel="stylesheet" href="./public/styles/styles_images.css" />
+    <link rel="stylesheet" href="./public/styles/styles.css" />
 </head>
 
 <body>
@@ -100,17 +100,17 @@
                     <span>Companies I've worked for</span>
                 </div>
                 <div class="mdl-grid margin-0">
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
-                        <small class="cursor-pointer eck-is-active font-bold">Blue Panda Labs</small>
+                    <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet" id="bluepandalabs">
+                        <small class="cursor-pointer font-bold eck-is-active">Blue Panda Labs</small>
                     </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet">
-                        <small class="cursor-pointer">K5 Ventures</small>
+                    <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet" id="theportal">
+                        <small class="cursor-pointer font-bold">The Portal</small>
                     </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet">
-                        <small class="cursor-pointer">The Portal</small>
+                    <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet" id="k5">
+                        <small class="cursor-pointer font-bold">K5 Ventures</small>
                     </div>
                 </div>
-                <div class="mdl-card__actions">
+                <div class="mdl-card__actions eck-company-info">
                     <P>Blue Panda Labs is a professional web application and technical consulting company.
                         We work tirelessly to provide timely and effective solutions for our clients,
                         whether it is developing an innovative application, or installing a custom hardware solution.</P>
