--- a/info.html
+++ b/info.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"/>
 
     <link rel="stylesheet" href="./public/styles/styles_global.css" />
-    <link rel="stylesheet" href="./public/styles/styles_images.css" />
+    <link rel="stylesheet" href="./public/styles/styles.css" />
 </head>
 
 <body>
@@ -59,6 +59,6 @@
 </div>
 <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 <script src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js"></script>
-<script src="./public/scripts/githublinkedin.js"></script>
+<script src="./public/scripts/info.js"></script>
 </body>
 </html>
