--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link rel="stylesheet" href="./public/styles/styles_global.css" />
-    <link rel="stylesheet" href="./public/styles/styles_images.css" />
+    <link rel="stylesheet" href="./public/styles/styles.css" />
 </head>
 
 <body>
