--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </li>
                         <li class="mdl-list__item eck-experience-list">
                             <span class="mdl-list__item-primary-content">
-                                MongoDB / Express.js
+                                MongoDB / Express
                             </span>
                         </li>
                         <li class="mdl-list__item eck-experience-list">
