--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </div>
     <!--Main Body-->
     <main class="mdl-layout__content">
-        <div class="mdl-grid mdl-grid-width">
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--3-col-tablet mdl-cell--4-col-phone mdl-cell--order-2-phone  mdl-card mdl-shadow--4dp">
+        <div class="mdl-grid mdl-grid-width-index">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--4-col-phone mdl-cell--order-2-phone  mdl-card mdl-shadow--4dp">
                 <div class="mdl-card__media">
                     <a href="#">
                         <img class="eck-card-profile-image" src="./public/images/profile_me.jpg">
@@ -87,14 +87,12 @@
                     </ul>
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--6-col mdl-cell--5-col-tablet mdl-cell--4-col-phone mdl-cell--order-1-phone mdl-card mdl-shadow--4dp">
+            <div class="mdl-cell mdl-cell--8-col mdl-cell--5-col-tablet mdl-cell--4-col-phone mdl-cell--order-1-phone mdl-card mdl-shadow--4dp">
                 <div class="mdl-card__title">
                     <h3 class="margin-top-0 margin-bottom-0">Eric Kyung Kim</h3>
                 </div>
                 <div class="mdl-card__media">
-                    <a href="#">
                         <img src="./public/images/portal_wide.jpg" class="width-percent-100 eck-card-wide-image">
-                    </a>
                 </div>
                 <div class="mdl-card__supporting-text padding-bottom-0">
                     <span>Companies I've worked for</span>
@@ -116,47 +114,41 @@
                         whether it is developing an innovative application, or installing a custom hardware solution.</P>
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--hide-phone mdl-card mdl-shadow--4dp eck-card-portrait-image min-height-400">
-                <div class="mdl-card__title mdl-card--expand"></div>
-                <div class="mdl-card__actions background-color-white">
-                    <span>Company Picnic August 2016</span>
-                </div>
-            </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-ladb-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-ladb-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     LADB.TV is an innovative platform for secure review and approval for the entertainment industry.
-                    Responsibilities include both front and back-end development and writing custom APIs to hook into third-party services.
+                    <!--Responsibilities include both front and back-end development and writing custom APIs to hook into third-party services.-->
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-screeningnow-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-screeningnow-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
-                    ScreeningNOW is a new highly advanced and technologically innovative video streaming service tailored to the needs of owners
-                     of nearly all forms of entertainment content, including movies, television, and video product.
+                    ScreeningNOW is a new video streaming service tailored to the needs of owners of nearly all forms of entertainment content.
                 </div>
             </div>
 
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-neybortalk-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-neybortalk-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
-                    NeyborTalk is an engaging social media platform that lets you chat with the people around you. Responsibilities included building a mobile MVP
-                    from ground up include both front and back-end development leveraging Foursquare's location service API
+                    NeyborTalk is an engaging social media platform that lets you chat with the people around you.
+                    <!--Responsibilities included building a mobile MVP from ground up include both front and back-end development leveraging Foursquare's location service API-->
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-naya-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-naya-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
-                    Naya is a centralized digital currency and medium of exchange, initially aimed at activities that exchanging Dollar isn't socially acceptable,
-                    e.g good deeds and favors. Responsibilities included building a website both front and back-end using Angular and Parse.
+                    Naya is a centralized digital currency initially aimed at activities that exchanging Dollar isn't socially acceptable,
+                    e.g good deeds and favors.
+                    <!--Responsibilities included building a website both front and back-end using Angular and Parse.-->
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-notary-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-notary-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
-                    NotaryCam is a web service where you can upload your document, connect to a live Notary face-to-face on a webcam, and electronically sign your document.
-                    Responsibilities include building a web application both front and back-end using WebRCT, Kurento, Raphael, canvg, and PDFjs.
+                    NotaryCam is a web service where you can connect to a live Notary face-to-face on a webcam, and electronically sign your document.
+                    <!--Responsibilities include building a web application both front and back-end using WebRCT, Kurento, Raphael, canvg, and PDFjs.-->
                 </div>
             </div>
-            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-portal-logo-image">
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--order-3-phone mdl-card mdl-shadow--4dp eck-card-logo-container eck-card-portal-logo-image">
                 <div class="mdl-card__title mdl-card--expand eck-transparent-overlay">
                     The Portal check-in system is an internal tool that allows admins to keep track of student hours and display student information and progress.
-                    Responsibilities include building a web application both front and back-end using minimal 3rd party libraries.
+                    <!--Responsibilities include building a web application both front and back-end using minimal 3rd party libraries.-->
                 </div>
             </div>
         </div>
