--- a/info.html
+++ b/info.html
@@ -51,7 +51,7 @@
 
 
     <main id="loadingGithub" class="mdl-layout__content display-none">
-        <div class="mdl-grid mdl-grid-width-1000">
+        <div class="mdl-grid mdl-grid-width-info">
             <div id="eck-github-profile" class="mdl-cell mdl-cell--3-col mdl-cell--5-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--4dp">
 
             </div>
