Contact page changes

--- a/contact.html
+++ b/contact.html
@@ -58,36 +58,36 @@
                     </span>
                 </div>
                 <div class="mdl-card__actions eck-contact-form">
-                    <!--<form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbzgSDGpdIk5MIh8lxYMXIEqo0KHNIfjcw6-DGEZTEFvAML-1LT6/exec  ">-->
-                        <!--&lt;!&ndash; change the form action to your script url &ndash;&gt;-->
+                    <form id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbzgSDGpdIk5MIh8lxYMXIEqo0KHNIfjcw6-DGEZTEFvAML-1LT6/exec  ">
+                        <!-- change the form action to your script url -->
 
-                        <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label width-percent-100 text-color-black">-->
-                            <!--<input class="mdl-textfield__input" pattern="[A-Z,a-z, ]*"  type="text" id="name" name="name">-->
-                            <!--<label class="mdl-textfield__label text-color-black" for="name">Name</label>-->
-                        <!--</div>-->
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width-percent-100 text-color-black">
+                            <input class="mdl-textfield__input" pattern="[A-Z,a-z, ]*"  type="text" id="name" name="name">
+                            <label class="mdl-textfield__label text-color-black" for="name">Name</label>
+                        </div>
 
-                        <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label width-percent-100 text-color-black">-->
-                            <!--<input class="mdl-textfield__input" type="text" id="company" name="company">-->
-                            <!--<label class="mdl-textfield__label text-color-black" for="company">Company <span class="text-color-mdl-grey">(optional)</span></label>-->
-                        <!--</div>-->
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width-percent-100 text-color-black">
+                            <input class="mdl-textfield__input" type="text" id="company" name="company">
+                            <label class="mdl-textfield__label text-color-black" for="company">Company <span class="text-color-mdl-grey">(optional)</span></label>
+                        </div>
 
-                        <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label width-percent-100 text-color-black">-->
-                            <!--<input class="mdl-textfield__input" type="email" id="email" name="email">-->
-                            <!--<label class="mdl-textfield__label text-color-black" for="email">Email</label>-->
-                        <!--</div>-->
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width-percent-100 text-color-black">
+                            <input class="mdl-textfield__input" type="email" id="email" name="email">
+                            <label class="mdl-textfield__label text-color-black" for="email">Email</label>
+                        </div>
 
-                        <!--<div id="email-invalid" style="visibility:hidden">-->
-                            <!--Must be a valid email address-->
-                        <!--</div>-->
+                        <div id="email-invalid" style="visibility:hidden">
+                            Must be a valid email address
+                        </div>
 
-                        <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label width-percent-100 text-color-black">-->
-                            <!--<textarea class="mdl-textfield__input" rows="4" id="message" name="message"></textarea>-->
-                            <!--<label class="mdl-textfield__label text-color-black" for="message">Leave a message...</label>-->
-                        <!--</div>-->
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label width-percent-100 text-color-black">
+                            <textarea class="mdl-textfield__input" rows="4" id="message" name="message"></textarea>
+                            <label class="mdl-textfield__label text-color-black" for="message">Leave a message...</label>
+                        </div>
 
-                        <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-button&#45;&#45;colored">-->
-                            <!--<i class="fa fa-paper-plane"></i>&nbsp;Send</button>-->
-                    <!--</form>-->
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                            <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
+                    </form>
                     <!--<form action="#">-->
                         <!--<div class="mdl-textfield mdl-js-textfield mdl-textfield&#45;&#45;floating-label width-percent-100 text-color-black">-->
                             <!--<input class="mdl-textfield__input" pattern="[A-Z,a-z, ]*"  type="text" id="name">-->
@@ -109,7 +109,7 @@
                     <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;raised mdl-button&#45;&#45;colored">-->
                         <!--Send-->
                     <!--</button>-->
-                    <div id="thankyou_message">
+                    <div class="display-none" id="thankyou_message">
                         <h4>Thanks for contacting me! I will get back to you soon!</h4>
                         <a href="./index.html">
                             <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Go to Main Page</button>
